<resources>
    <string name="app_name">Ericsson Reference App</string>

    <!-- Login related strings -->
    <string name="prompt_environment">Environment</string>
    <string name="prompt_customer">Customer</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remember_me">Remember me</string>
    <string name="prompt_anonymous">Anonymous</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="info_sign_in">Signing in...</string>

    <string name="action_settings">Settings</string>

</resources>
